@@ -6,7 +6,7 @@
 	],
 	"Simmering": {
 		"meltingPoint": 150,
-		"meltingDuration": 100,
+		"meltingDuration": 10,
 		"smeltedRatio": 1,
 		"smeltingType": "bake",
 		"smeltedStack": { "type": "item", "code": "expandedfoods:breadedball-{grain}-cooked" },
@@ -20,7 +20,7 @@
 	],
 	"Simmering": {
 		"meltingPoint": 150,
-		"meltingDuration": 100,
+		"meltingDuration": 10,
 		"smeltedRatio": 1,
 		"smeltingType": "bake",
 		"smeltedStack": { "type": "item", "code": "expandedfoods:breadedball-{grain}-cooked" },
