@@ -6,7 +6,7 @@
 	],
 	"Simmering": {
 		"meltingPoint": 150,
-		"meltingDuration": 100,
+		"meltingDuration": 10,
 		"smeltedRatio": 1,
 		"smeltingType": "bake",
 		"smeltedStack": { "type": "item", "code": "expandedfoods:breadedmeatnugget-{grain}-bushmeat-tender" },
@@ -20,7 +20,7 @@
 	],
 	"Simmering": {
 		"meltingPoint": 150,
-		"meltingDuration": 100,
+		"meltingDuration": 10,
 		"smeltedRatio": 1,
 		"smeltingType": "bake",
 		"smeltedStack": { "type": "item", "code": "expandedfoods:breadedmeatnugget-{grain}-bushmeat-tender" },
@@ -34,7 +34,7 @@
 	],
 	"Simmering": {
 		"meltingPoint": 150,
-		"meltingDuration": 100,
+		"meltingDuration": 10,
 		"smeltedRatio": 1,
 		"smeltingType": "bake",
 		"smeltedStack": { "type": "item", "code": "expandedfoods:breadedmeatnugget-{grain}-poultry-tender" },
@@ -48,7 +48,7 @@
 	],
 	"Simmering": {
 		"meltingPoint": 150,
-		"meltingDuration": 100,
+		"meltingDuration": 10,
 		"smeltedRatio": 1,
 		"smeltingType": "bake",
 		"smeltedStack": { "type": "item", "code": "expandedfoods:breadedmeatnugget-{grain}-poultry-tender" },
@@ -62,7 +62,7 @@
 	],
 	"Simmering": {
 		"meltingPoint": 150,
-		"meltingDuration": 100,
+		"meltingDuration": 10,
 		"smeltedRatio": 1,
 		"smeltingType": "bake",
 		"smeltedStack": { "type": "item", "code": "expandedfoods:breadedmeatnugget-{grain}-redmeat-tender" },
@@ -76,7 +76,7 @@
 	],
 	"Simmering": {
 		"meltingPoint": 150,
-		"meltingDuration": 100,
+		"meltingDuration": 10,
 		"smeltedRatio": 1,
 		"smeltingType": "bake",
 		"smeltedStack": { "type": "item", "code": "expandedfoods:breadedmeatnugget-{grain}-redmeat-tender" },
