@@ -6,7 +6,7 @@
 	],
 	"Simmering": {
 		"meltingPoint": 150,
-		"meltingDuration": 100,
+		"meltingDuration": 10,
 		"smeltedRatio": 1,
 		"smeltingType": "bake",
 		"smeltedStack": { "type": "item", "code": "expandedfoods:breadedvegetable-birch-{vegetable}-cooked" },
@@ -20,7 +20,7 @@
 	],
 	"Simmering": {
 		"meltingPoint": 150,
-		"meltingDuration": 100,
+		"meltingDuration": 10,
 		"smeltedRatio": 1,
 		"smeltingType": "bake",
 		"smeltedStack": { "type": "item", "code": "expandedfoods:breadedvegetable-birch-{vegetable}-cooked" },
@@ -34,7 +34,7 @@
   ],
   "Simmering": {
     "meltingPoint": 150,
-    "meltingDuration": 100,
+    "meltingDuration": 10,
     "smeltedRatio": 1,
     "smeltingType": "bake",
     "smeltedStack": { "type": "item",  "code": "expandedfoods:breadedvegetable-pine-{vegetable}-cooked" },
@@ -48,7 +48,7 @@
   ],
   "Simmering": {
     "meltingPoint": 150,
-    "meltingDuration": 100,
+    "meltingDuration": 10,
     "smeltedRatio": 1,
     "smeltingType": "bake",
     "smeltedStack": { "type": "item", "code": "expandedfoods:breadedvegetable-pine-{vegetable}-cooked" },
@@ -62,7 +62,7 @@
   ],
   "Simmering": {
     "meltingPoint": 150,
-    "meltingDuration": 100,
+    "meltingDuration": 10,
     "smeltedRatio": 1,
     "smeltingType": "bake",
     "smeltedStack": { "type": "item", "code": "expandedfoods:breadedvegetable-maple-{vegetable}-cooked" },
@@ -76,7 +76,7 @@
   ],
   "Simmering": {
     "meltingPoint": 150,
-    "meltingDuration": 100,
+    "meltingDuration": 10,
     "smeltedRatio": 1,
     "smeltingType": "bake",
     "smeltedStack": { "type": "item", "code": "expandedfoods:breadedvegetable-maple-{vegetable}-cooked" },
