@@ -6,7 +6,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 200,
-			"meltingDuration": 110,
+			"meltingDuration": 24,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "ancienttools:saltedmeat-{meat}-cooked", "quantity":  1 },
