@@ -6,7 +6,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 200,
-			"meltingDuration": 110,
+			"meltingDuration": 24,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "expandedfoods:saltedmeatnugget-{meat}-cooked", "quantity":  1 },
@@ -20,7 +20,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 200,
-			"meltingDuration": 110,
+			"meltingDuration": 24,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "expandedfoods:saltedmeatnugget-{meat}-cooked", "quantity":  1 },
@@ -34,7 +34,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 200,
-			"meltingDuration": 110,
+			"meltingDuration": 24,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "expandedfoods:saltedmeatnugget-{meat}-tender", "quantity":  1 },
@@ -48,7 +48,7 @@
 		],
 		"Simmering": {
 			"meltingPoint": 200,
-			"meltingDuration": 110,
+			"meltingDuration": 24,
 			"smeltedRatio": 1,
 			"smeltingType": "bake",
 			"smeltedStack": { "type": "item", "code": "expandedfoods:saltedmeatnugget-{meat}-tender", "quantity":  1 },
