@@ -102,6 +102,7 @@ REBALANCING:
 - Hardtack & pemmican can be added to soup/stews
 - Lard simmering recipes' meltingDuration cut from 110 seconds to 24 - DONE!!!
 - Broth simmering recipes' meltingDuration cut from 110 seconds to 24 - DONE!!!
+- Ancient Tools' simmering recipes' meltingDuration updated to match other recipes - DONE!!!
 - Gelatin simmering recipes' meltingDuration cut from 450 seconds to 48 - DONE!!!
 - Acorn coffee simmering recipe's meltingDuration cut from 110 seconds to 24 - DONE!!!
 
